--- a/src/Manassa/Windows/MsMsGrid.xaml
+++ b/src/Manassa/Windows/MsMsGrid.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:converters="clr-namespace:Manaassa.Converters"
+             xmlns:converters="clr-namespace:Manassa.Converters"
              mc:Ignorable="d" 
              d:DesignHeight="317" d:DesignWidth="669">
     <UserControl.Resources>
